Enable owner labelling of keys in Mbedtls
This change modifies the build configuration for mbedtls when it
is used as a backend for the crypto provider to enable labelling
of key ids using an externally provided identifier.  This allows
the key store to be partitioned to protect keys from unauthorized
access.  Currently, the partitioning is based on the caller id
that identifies a calling client.  For FFA deployments, this
is the source partition id.  Because the configuration change
alters the psa crypto api exposed by mbedcrypto, a number of
changes were needed to allow the modified api to coexist
in builds alongside clients that depend on the standard api.
Some old unit test cases that were not practical to modify
have been removed.  From a coverage perspective, most of the
same areas are covered by the extensive set of service level
tests.

Signed-off-by: Julian Hall <julian.hall@arm.com>
Change-Id: I2762c91bba2dba0a6305aefe61f256355defaf3a

--- a/deployments/libts/linux-pc/CMakeLists.txt
+++ b/deployments/libts/linux-pc/CMakeLists.txt
@@ -60,6 +60,8 @@ add_components(
 		"components/service/attestation/key_mngr/local"
 		"components/service/attestation/provider"
 		"components/service/attestation/provider/serializer/packed-c"
+		"components/service/crypto/include"
+		"components/service/crypto/client/psa"
 		"components/service/crypto/provider"
 		"components/service/crypto/provider/serializer/protobuf"
 		"components/service/crypto/provider/serializer/packed-c"
@@ -149,6 +151,8 @@ add_components(
 		"components/service/crypto/test/service"
 		"components/service/crypto/test/service/protobuf"
 		"components/service/crypto/test/service/packed-c"
+		"components/service/crypto/include"
+		"components/service/crypto/client/psa"
 		"components/service/crypto/client/cpp"
 		"components/service/crypto/client/cpp/protocol/protobuf"
 		"components/service/crypto/client/cpp/protocol/packed-c"
